Donnés JSON et local storage ajouté au projet P-C-S

--- a/Projet-Papier-Caillou-Ciseau/PapierCaillouCiseau.html
+++ b/Projet-Papier-Caillou-Ciseau/PapierCaillouCiseau.html
@@ -35,17 +35,22 @@
     score.wins = 0,
     score.looses = 0,
     score.ties = 0
+    localStorage.removeItem(`score`)
     "
     >
       Reset Score
     </button>
 
     <script>
-      const score = {
-        wins: 0,
-        looses: 0,
-        ties: 0,
-      };
+      let score = JSON.parse(localStorage.getItem(`score`));
+
+      if (score === null) {
+        score = {
+          wins: 0,
+          losses: 0,
+          ties: 0,
+        };
+      }
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -85,6 +90,9 @@
         } else if (result === `Tie.`) {
           score.ties += 1;
         }
+
+        localStorage.setItem(`score`, JSON.stringify(score));
+
         alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
 Wins: ${score.wins}, Looses: ${score.looses}, Ties: ${score.ties}`);
       }
