--- a/Objet/objet.html
+++ b/Objet/objet.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script>
+      /*
       const product = {
         name: `socks`,
         price: 1090,
@@ -19,6 +20,70 @@
       console.log(product);
       delete product.new;
       console.log(product);
+      */
+      /*
+      const produit2 = {
+        nom: `shirt`,
+        [`delivery-time`]: `1 day`,
+        rating: {
+          stars: 4.5,
+          count: 87,
+        },
+
+        fun: function test1() {
+          console.log("test de la function dans un objet");
+        },
+      };
+
+      console.log(produit2.nom);
+      console.log(produit2[`delivery-time`]);
+      console.log(produit2.rating.count);
+
+      produit2.fun();
+
+      console.log(JSON.stringify(produit2));
+
+      const jsonString = JSON.stringify(produit2);
+
+      console.log(JSON.parse(jsonString));
+      */
+
+      console.log("hello".length);
+      console.log("hello".toUpperCase());
+
+      const object1 = {
+        message: "hello",
+      };
+      const object2 = object1;
+      console.log(object2);
+
+      object1.message = "Good Job !";
+      console.log(object1);
+
+      const object3 = {
+        message: "Good Job !",
+      };
+
+      console.log(object1 === object3);
+
+      const object4 = {
+        message: "Good Job !",
+        price: 799,
+      };
+      //const message = object4.message;
+      const { message, price } = object4;
+      console.log(message);
+      console.log(price);
+
+      const object5 = {
+        message,
+
+        method() {
+          console.log("method");
+        },
+      };
+      console.log(object5);
+      object5.method();
     </script>
   </body>
 </html>
