finition Javascript papier caillou Ciseau

--- a/DOM/domproject.html
+++ b/DOM/domproject.html
@@ -34,6 +34,8 @@
     <p class="texteprix"></p>
 
     <script>
+      window.document;
+
       function ValideravecEntrer(event) {
         if (event.key === "Enter") {
           calculertotal();
