--- a/DOM/Projet-Papier-Caillou-Ciseau-P9.html
+++ b/DOM/Projet-Papier-Caillou-Ciseau-P9.html
@@ -30,33 +30,35 @@
     </button>
     <p class="resultat"></p>
     <p class="mouvement"></p>
-    <p class="score"></p>
-
+    <p class="js-score"></p>
     <button
       onclick="
-    
-    score.wins = 0,
-    score.looses = 0,
-    score.ties = 0
-    localStorage.removeItem(`score`)
-    scoreajour();
+      score.wins = 0;
+      score.losses = 0;
+      score.ties = 0;
+      localStorage.removeItem('score');
+      scoreajour();
     "
     >
       Reset Score
     </button>
 
     <script>
-      let score = JSON.parse(localStorage.getItem(`score`));
-
-      if (score === null) {
+      let score = JSON.parse(localStorage.getItem("score")) || {
+        wins: 0,
+        losses: 0,
+        ties: 0,
+      };
+      scoreajour();
+      /*
+      if (!score) {
         score = {
           wins: 0,
           losses: 0,
-          ties: 0,
+          ties: 0
         };
       }
-
-      scoreajour();
+      */
 
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
@@ -89,31 +91,31 @@
           }
         }
 
-        if (result === `You win.`) {
+        if (result === "You win.") {
           score.wins += 1;
-        } else if (result === `You lose.`) {
-          score.looses += 1;
-        } else if (result === `Tie.`) {
+        } else if (result === "You lose.") {
+          score.losses += 1;
+        } else if (result === "Tie.") {
           score.ties += 1;
         }
 
-        localStorage.setItem(`score`, JSON.stringify(score));
+        localStorage.setItem("score", JSON.stringify(score));
 
         scoreajour();
 
         document.querySelector(`.resultat`).innerHTML = result;
         document.querySelector(
           `.mouvement`
-        ).innerHTML = `You picked ${playerMove} -  Computed Picked ${computerMove}  `;
+        ).innerHTML = `You picked ${playerMove}. Computer picked ${computerMove}`;
 
         alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
-Wins: ${score.wins}, Looses: ${score.looses}, Ties: ${score.ties}`);
+Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
       }
 
       function scoreajour() {
         document.querySelector(
-          `.score`
-        ).innerHTML = `Wins: ${score.wins}, Looses: ${score.looses}, Ties: ${score.ties}`;
+          `.js-score`
+        ).innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
       }
       function pickComputerMove() {
         const randomNumber = Math.random();
