--- a/Projet-Carte/carte.html
+++ b/Projet-Carte/carte.html
@@ -4,64 +4,122 @@
     <title>Cart Quantity</title>
   </head>
   <body>
-    <button onclick="
-      console.log(`Cart quantity: ${cartQuantity}`);
-    ">Show Quantity</button>
+    <button
+      onclick="
+      // Display the cart quantity on the page
+      // instead of in the console.
+      displayCartQuantity();
+    "
+    >
+      Show Quantity
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(1);
-    ">Add to Cart</button>
+    "
+    >
+      Add to Cart
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(2);
-    ">+2</button>
+    "
+    >
+      +2
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(3);
-    ">+3</button>
+    "
+    >
+      +3
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(4);
-    ">+4</button>
+    "
+    >
+      +4
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(5);
-    ">+5</button>
+    "
+    >
+      +5
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(-1);
-    ">Remove from cart</button>
+    "
+    >
+      Remove from cart
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(-2);
-    ">-2</button>
+    "
+    >
+      -2
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       updateCartQuantity(-3);
-    ">-3</button>
+    "
+    >
+      -3
+    </button>
 
-    <button onclick="
+    <button
+      onclick="
       cartQuantity = 0;
       console.log('Cart was reset.');
-      console.log(`Cart quantity: ${cartQuantity}`);
-    ">Reset Cart</button>
+
+      // Display the cart quantity after updating.
+      displayCartQuantity();
+    "
+    >
+      Reset Cart
+    </button>
+
+    <!-- Create an element to display the cart quantity. -->
+    <p class="js-cart-quantity"></p>
 
     <script>
       let cartQuantity = 0;
 
+      // Display the cart quantity when the page loads.
+      displayCartQuantity();
+
       function updateCartQuantity(change) {
         if (cartQuantity + change > 10) {
-          alert('The cart is full');
+          alert("The cart is full");
           return;
         }
 
         if (cartQuantity + change < 0) {
-          alert('Not enough items in the cart');
+          alert("Not enough items in the cart");
           return;
         }
 
         cartQuantity += change;
-        console.log(`Cart quantity: ${cartQuantity}`);
+
+        // Display the cart quantity after updating.
+        displayCartQuantity();
+      }
+
+      function displayCartQuantity() {
+        document.querySelector(
+          ".js-cart-quantity"
+        ).innerHTML = `Cart quantity: ${cartQuantity}`;
       }
     </script>
   </body>
